<resources>
    <string name="app_name">Parcial_Andres</string>
    <string name="titulo">Parcial_1</string>
    <string name="login">Mi Login</string>
    <string name="usuario">Usuario</string>
    <string name="place_holder1">Digita tu usuario...</string>
    <string name="contraseña">Contraseña</string>
    <string name="place_holder2">Digita tu contraseña...</string>
    <string name="ingresar">Ingresar</string>

    <string name="miNombre">Andres Jaimes</string>">
</resources>