<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4E00D9"
        >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:gravity="center"
        android:text="@string/titulo"

        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#44D0C2"
        >
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp"
                android:text="@string/login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/usuario"/>


            <EditText
                android:inputType="text"
                android:id="@+id/edt_usuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/place_holder1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/contraseña"/>


            <EditText
                android:inputType="text"
                android:id="@+id/edt_contraseña"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/place_holder2"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btn_ingresar"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:backgroundTint="#FF0000"
                android:text="@string/ingresar"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>